# veloxlsx

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: conftest.py  huge_fixture.py  large_file_benchmark_template.py  memory_timing.py  memory_worker.py  test_read_huge.py  visualize_results.py
docs/: .gitignore  README.md  api.rst  architecture.rst  comparison.rst  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
docs/_static/: custom.css
python/fast_xlsx/: __init__.py  __init__.pyi
python/veloxlsx/: __init__.py  __init__.pyi
src/: error.rs  lib.rs  row_stream.rs  write.rs  xlsx.rs
tests/: conftest.py  test_benchmark.py  test_read.py  test_stream_rows.py  test_write.py
