[package]
name = "veloxlsx"
version = "0.1.0"
edition = "2021"
description = "Fast XLSX reader (Python bindings over Rust)"

[lib]
# cdylib basename; PyO3 `#[pymodule] fn _native` → `PyInit__native` for `import veloxlsx._native`.
name = "_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }
quick-xml = "0.37"
zip = { version = "2", default-features = false, features = ["deflate"] }
thiserror = "2"
