[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "veloxlsx"
version = "0.1.0"
description = "Python-first XLSX reader with a Rust core"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "veloxlsx contributors" }]
keywords = ["xlsx", "excel", "spreadsheet", "rust"]
classifiers = [
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
  "maturin>=1.5",
  "pytest>=8.0",
  "pytest-benchmark>=4.0",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "python-calamine>=0.5",
  "xlsxwriter>=3.1",
]
docs = [
  "sphinx>=7.0.0",
  "sphinx-furo>=2024.0.0",
  "sphinx-autodoc-typehints>=2.0.0",
]

[tool.maturin]
# Native code is ``veloxlsx._native``; ``veloxlsx`` package re-exports and ships stubs (PEP 561).
module-name = "veloxlsx._native"
python-source = "python"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
